Add host separation

--- a/.config/bspwm/readme.adoc
+++ b/.config/bspwm/readme.adoc
@@ -1,21 +1,28 @@
 - Adding a monitor needs:
-  - xrandr command
-  - kill and restart bar
-  - add desktops and/or rename
-  - nitrogen --restore
+-- xrandr command
+-- kill and restart bar
+-- add desktops and/or rename
+-- nitrogen --restore
+-- OK, see xrandr.sh
 
 - lemonbar needs:
-  - severe script overhaul
-  - bspc as lua lib?
-  - xft patch (bug: monospace fonts only)
+-- severe script overhaul
+-- bspc as lua lib?
+-- xft patch (bug: monospace fonts only)
+-- given up
 
 - bspwmbar needs:
-  - MPD plugin 
-  - refresh / reload on monitor change 
-  - clickability
+-- MPD plugin, todo
+-- refresh / reload on monitor change 
+-- clickability, todo
+-- given up
 
 - polybar needs:
-  - hamster plugin
+-- hamster plugin, see polybar-hamster.sh
+-- OKish
   
 - sxhkd needs:
-  - printonly patch
+-- printonly patch, todo
+-- given up since lemonbar-ish
+
+
